tests/compiler/expected/output/InitializerListNestedTypeError2.shtk.txt
MODULE InitializerListNestedTypeError2.shtk
ERROR in Line 3 Col 46

    var a:int[3][3] = [[1, 2, 3], [4, 5, 6], [7, 8]]
                                             ^
Type error, did not expect autoInt[2],
expected autoInt[3]
